--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -123,6 +123,13 @@
 	url = {https://www.youtube.com/watch?v=WdUbXWztKNY}
 }
 
+@Misc{dbSQLite,
+  title = {SQLite},
+  month = mar,
+  year = {2016},
+  url = {https://www.sqlite.org}
+}
+
 @Misc{exportCSVsendMail,
   title = {Mails versenden in Android},
   month = mar,
@@ -179,6 +186,21 @@
   url =   {https://github.com/}
 }
 
+@Misc{githubGuide,
+  author = {Roger Dudler},
+  title =  {git - the simple guide},
+  month =  mar,
+  year =   {2016},
+  url =    {http://rogerdudler.github.io/git-guide/}
+}
+
+@Misc{githubSetUpGit,
+  title = {Set Up Git},
+  month = mar,
+  year =  {2016},
+  url =   {https://help.github.com/articles/set-up-git/}
+}
+
 @Misc{gpDevContentPolicy,
   title = {Google Play-Programmrichtlinien},
   month = feb,
@@ -222,6 +244,14 @@
 	url = {https://www.facebook.com/Lindenpower-Fitness-174332482640559/}
 }
 
+@Misc{ueClickableAreas,
+  author = {{Bill Lahti}},
+  title = {Android Images With Clickable Areas – Part 1},
+  month = mar,
+  year = {2016},
+  url =   {https://blahti.wordpress.com/2012/06/26/images-with-clickable-areas}
+}
+
 @Misc{wMusicDroid,
   title = {MusicDroid - Audio Player Part I},
   month = feb,
@@ -242,19 +272,4 @@
   month = feb,
   year =  {2016},
   url =   {https://www.youtube.com/watch?v=W1JE-jUisVU}
-}
-
-@Misc{ueClickableAreas,
-  author = {{Bill Lahti}},
-  title = {Android Images With Clickable Areas – Part 1},
-  month = mar,
-  year = {2016},
-  url =   {https://blahti.wordpress.com/2012/06/26/images-with-clickable-areas}
-}
-
-@Misc{dbSQLite,
-  title = {SQLite},
-  month = mar,
-  year = {2016},
-  url = {https://www.sqlite.org}
 }
