--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_DataBase.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_DataBase.tex
@@ -5,29 +5,29 @@
 
 \begin{document}
 
-\section{Datenbank}
-
+\subsection{Datenbank}
+\subsubsection{Beschreibung}
 In der Datenbank werden alle für die Applikation essentiellen Daten gespeichert.
 
-\subsection{SQLite}
-SQLite ist eine open-source library, sie implementiert ein unabhängiges, serverlosse, zeroconf und transaktionales SQL-database-engine [\citetitle{dbSQLite}\cite{dbSQLite}]
+\subsubsection{SQLite}
+SQLite ist eine open-source Library, sie implementiert ein unabhängiges, serverloses, ''zero-configuration'' und transaktionales SQL-database-engine [\citetitle{dbSQLite}\cite{dbSQLite}]
 
 
-\subsection{Zugriff auf die Daten}
+\subsubsection{Zugriff auf die Daten}
 Der Zugriff auf die abgespeicherten Daten erfolgt über 3 Schichten:
 
-\subsubsection{Phsysische Ebene}
-Alle Daten werden im Speicher des Mobilgerätes abgelegt und persistiert. Die Speicherung übernimmt das DBMS von SQLite.
+\paragraph{Phsysische Ebene}\ \\
+Alle Daten werden im lokalen Speicher des Mobilgerätes abgelegt und persistiert. Die Speicherung übernimmt das DBMS von SQLite.
 
-\subsubsection{DB Helper}
+\paragraph{DB Helper}\ \\
 Der DB Helper stellt die Datenbank als Objekt zur Verfügung, welches in den Repositories instanziert wird.
 
 
 \newpage
-\subsubsection{Repositories}
+\paragraph{Repositories}\ \\
 Die Repositories dienen als Puffer zwischen dem Datenbankobjekt und der Businesslogik.
 Jedes Repository ist als Singleton implementiert und um darauf zugreifen zu können muss es vorerst im Code instanziert werden.
-\\\
+\ \\
 \begin{lstlisting}
 Repository repository = Repository.getInstance();
 \end{lstlisting}
@@ -62,13 +62,13 @@ Folgende Repositories sind in der Applikation vorhanden:
 \item Key-Value-Repository
 \item Phasen-Repository
 \item Plan-Repository
-\item Playlis-Songs-Repository
-\item Statistic-Repository
+\item Playlist-Songs-Repository
+\item Statistik-Repository
 \item Uebungen-Repository
 \end{itemize}
 
 \newpage
-\subsection{Contract}
+\subsubsection{Contract}
 Der Contract ist eine Datei in welcher die Metadaten der Datenbank zu finden sind.
 Dieser "Vertrag" existert um den makellosen Zugriff auf die Datenbank sicherzustellen.
 Für jede Tabelle in der Datenbank wird im Contract eine eigene Klasse angelegt, diese beinhaltet den Tabellennamen und die Namen aller ihrer Attribute als strings.
