--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
@@ -5,6 +5,11 @@
 
 \begin{document}
 \subsubsection{Latex}
-todo
+\paragraph{Miktex}\ \\
+MiKTeX ist eine TeX-Distribution für Microsofts Windows-Betriebssysteme. Die ergänzenden MiKTeX Tools wurden ebenso auf GNU/Linux portiert [\citetitle{lxMiktex} \cite{lxMiktex}].
+
+\paragraph{TeXworks}\ \\
+TeXworks ist ein quelloffenes Anwendungsprogramm für Windows, Unix-Systeme und Mac OS X. Es ist eine graphische Benutzeroberfläche für das Textsatzprogramm TeX und dessen Erweiterungen LaTeX, ConTeXt und XeTeX [\citetitle{lxTexworks} \cite{lxTexworks}].
+
 
 \end{document}
