--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -215,6 +215,20 @@
   url =   {https://support.google.com/googleplay/android-developer/answer/6151557}
 }
 
+@Misc{lxMiktex,
+  title = {MiKTeX},
+  month = mar,
+  year =  {2016},
+  url =   {https://de.wikipedia.org/wiki/MiKTeX}
+}
+
+@Misc{lxTexworks,
+  title = {TeXworks},
+  month = mar,
+  year =  {2016},
+  url =   {https://de.wikipedia.org/wiki/TeXworks}
+}
+
 @Misc{promteil1,
 	title = {Möglichkeiten der App Vermarktung: Teil 1},
 	month = apr,
