--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
@@ -4,28 +4,28 @@
 %\date{25. Februar 2016}
 
 \begin{document}
-\subsection{Free/Paid Versions}
+\subsubsection{Gratis/Bezahlte Versionen}
 
 
-\subsubsection{Beschreibung}
-Es ist eine Basis (Free) Version gratis erhältlich, diese enthält nicht den gesamten Funktionsumhang.
+\paragraph{Beschreibung}\ \\
+Es ist eine Basis (Gratis) Version gratis erhältlich, diese enthält nicht den gesamten Funktionsumhang.
 Um alle Funktionen freizuschalten ist eine Gebühr zu zahlen.
 
-\subsubsection{Vorteile}
+\paragraph{Vorteile}\ \\
 \begin{itemize}
 \item Der Kunde kann sich bevor er Geld investiert einen ersten Eindruck verschaffen und muss die App nicht "blind" kaufen.
 \item Da es keine Einstiegs-Barriere gibt, erreicht die App mehr User und wird sich somit schneller verbreiten.
 \end{itemize}
 
-\subsubsection{Nachteile}
+\paragraph{Nachteile}\ \\
 \begin{itemize}
-\item Der Hauptteil aller Apps die dieses Modell wählen, verlieren im Laufe ihrer Lebenszeit Geld. Nur ein sehr kleiner Teil kann sich durchsetzen.
-\item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps, als bezahlte Apps und somit ist es schwerer sich am Markt durchzusetzen.
+\item Der Hauptteil aller Applikationen die dieses Modell wählen, sind während ihrer Lebenszeit nicht profitabel. Nur ein sehr kleiner Teil kann sich durchsetzen.
+\item Es gibt im Google-Play-Store etwa vier mal mehr gratis Apps, als bezahlte Apps und somit ist es schwerer sich mit einer App am Markt durchzusetzen.
 \end{itemize}
 
-\subsubsection{Implementierung}
+\paragraph{Implementierung}\ \\
 
-Android Studio bietet eine Möglichkeit eine bezahlte und eine gratis in einem Projekt zu entwickeln.
- Dies macht es trivial dieses Konzept in die Realität umzusetzen.
+Android Studio bietet eine Möglichkeit eine bezahlte und eine gratis Version in einem Projekt zu entwickeln.
+Dies macht es trivial dieses Konzept in die Realität umzusetzen.
 
 \end{document}
