--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
@@ -4,26 +4,26 @@
 %\date{26. Februar 2016}
 
 \begin{document}
-\subsection{SellApp}
+\subsubsection{SellApp}
 
 
-\subsubsection{Beschreibung}
+\paragraph{Beschreibung}\ \\
 Nachdem die App eine größere Benutzerbasis hat, könnte es Interessenten zum Kauf des gesamten Projektes geben.
 
 
-\subsubsection{Vorteile}
+\paragraph{Vorteile}\ \\
 \begin{itemize}
 \item Der Gesamtwert einer gut gepflegten App mit großer Userbasis liegt extrem hoch und diese Methode wäre eine der rentabelsten.
-\item Flexibilität bei der Weiterentwicklung, wir würden entscheiden können ob wir unser Produkt weiterentwickeln oder nicht. Bei Nichtbeiteiligung wäre die Instandhaltung der App aus unseren Händen und das Projekt für uns abgeschlossen.
+\item Flexibilität bei der Weiterentwicklung, die Entwickler können entscheiden ob wir sie das Produkt weiterentwickeln oder nicht. Bei Nichtbeiteiligung ist die Instandhaltung der Applikation aus ihren Händen und das Projekt abgeschlossen.
 \end{itemize}
 
-\subsubsection{Nachteile}
+\paragraph{Nachteile}\ \\
 \begin{itemize}
-\item Wenn entschieden wird die App mit der Firma, die unsere App erworben hat, weiter zu arbeiten, wäre unsere gestalterische Freiheit eingeschränkt und es wäre schwerer Visionen umzusetzen.
+\item Falls entschieden wird die Applikation mit der Firma, welche sie erworben hat, weiter zu arbeiten, ist die gestalterische Freiheit der Entwickler eingeschränkt und es ist schwerer Visionen umzusetzen.
 \end{itemize}
 
 
-\subsubsection{Probleme/Schwierigkeiten}
+\paragraph{Probleme/Schwierigkeiten}\ \\
 Es werden einige Problem aufgeworfen beim Verkauf einer App an eine größere Firma. Die erste Hürde ist einen Käufer zu finden.
 Ohne eine große Userbasis wird das Interesse an unserem Produkt sehr niedrig sein, deshalb wird es eine Weile dauern bis uns diese Möglichkeit zur Verfügung steht.
 Weiters fehlt uns in dieser Hinsicht die Erfahrung, also müssten wir uns auf dritte Personen verlassen den Verkauf für uns abzuwickeln.
