--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -7,7 +7,10 @@
 
 \begin{document}
 \maketitle
+% KAPITEL ALLGEMEINES
 \tableofcontents
+\newpage
+\subfile{all_abstract}
 
 \newpage % KAPITEL PFLICHTENHEFT
 \subfile{all_pflichtenheft}
@@ -55,8 +58,8 @@
 \subfile{bersenkowitsch_export}
 \newpage
 \subfile{bersenkowitsch_trainingsplanmgt}
-\newpage
-\subfile{irsiegler_Exercises}
+%\newpage
+%\subfile{irsiegler_Exercises}
 \newpage
 \subfile{irsiegler_Video}
 \newpage
