--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -12,7 +12,7 @@
 	\[\%RM=\frac{100*Trainingsgewicht}{102.78-(2.78*Wiederholungen)}\]
 	Wenn man sich also das Trainingsgewicht ausrechnen will, mit dem man eine "Ubung ausführen soll, geht man wie folgt vor (Vorgeschlagener \%RM-Wert und Wiederholungen sind angegeben):
 	\[Trainingsgewicht=\frac{\%RM*(102.78-(2,78*Wiederholungen))}{100}\]
-	Mit dem errechneten Gewicht führt man nun die jeweilige zugeordnete "Ubung aus. Da  bei konsequentem Training die Kraft steigt, sollte man auch immer das Trainingsgewicht erhöhen. Um maximalen Fortschritt zu erziehlen, wird empfohlen, die Wiederholungen gleich bleiben zu lassen. Der Benutzer testet selbst wieviel Gewicht er mit den Wiederholungen schafft, die Änderung der Gewichts wird von ihm festgehalten, um positive Entwicklungen feststellen zu k"onnen. 
+	Mit dem errechneten Gewicht führt man nun die jeweilige zugeordnete "Ubung aus. Da  bei konsequentem Training die Kraft steigt, sollte man auch immer das Trainingsgewicht erhöhen. Um maximalen Fortschritt zu erzielen, wird empfohlen, die Wiederholungen gleich bleiben zu lassen. Der Benutzer testet selbst wieviel Gewicht er mit den Wiederholungen schafft, die Änderung der Gewichts wird von ihm festgehalten, um positive Entwicklungen feststellen zu k"onnen. 
 	\newline
 	Das Gewicht kann auch selbst abgeschätzt werden. Das Gewicht ist dann optimal gewählt, wenn man damit zwischen 10 und 13 Wiederholungen schafft.
 	Weiters wird immer auf eine Aufwärmphase hingewiesen, welche man vor jeder Trainingseinheit durchführen muss. Sie besteht aus 5-10 Minuten Laufen und Dehnen.
