added: Autorenblatt, Danksagungen, eid Erklärung, personablatt, androidstudio doku, photoshop doku, texstudio doku
ay

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,16 +10,22 @@
 % KAPITEL ALLGEMEINES
 \tableofcontents
 \newpage
+\subfile{all_erklaerung}
+\newpage
 \subfile{all_abstract}
+\newpage
+\subfile{all_danksagung}
+\newpage
+\subfile{all_autoren}
+\newpage
+\subfile{all_personas}
 
 \newpage % KAPITEL PFLICHTENHEFT
 \subfile{all_pflichtenheft}
 
-
 \newpage % KAPITEL THEORETISCHER HINTERGRUND
 \section{Der Trainingsplan}
 \subfile{bersenkowitsch_Trainingsplan}
-
 
 \newpage % KAPITEL VERWENDETE TECHNOLOGIEN
 \section{Verwendete Technologien}
