--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_latex.tex
@@ -3,5 +3,7 @@
 %\author{Daniel Bersenkowitsch}
 
 \begin{document}
-	TODO: TextStudio
+	\subsubsection{TexStudio}
+	TexStudio ist eine im Jahr 2009 herausgekommene Entwicklungsumgebung für Latex dokumente. Entwickelt von Jan Sundermeyer, Daniel Braun und Tim Hoffmann ist sie eine der meistgenutzten Latex IDE für den Mac Computer und basiert auf Texmaker.
+	[\citetitle{texstudio} \cite{texstudio}]   
 \end{document}
