--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,8 +1,29 @@
 % Encoding: UTF-8
 
+@Misc{adobephoto,
+	title = {Adobe Photoshop},
+	month = mar,
+	year =  {2016},
+	url =   {http://www.adobe.com/}
+}
+
+@Misc{texstudio,
+	title = {TexStudio},
+	month = mar,
+	year =  {2016},
+	url =   {http://latex.tugraz.at/programme/texstudio}
+}
+
+@Misc{androidstudiodef,
+	title = {Android Studio Dev},
+	month = mar,
+	year =  {2016},
+	url =   {https://developer.android.com/tools/studio/index.html}
+}
+
 @Misc{2016,
   title = {Möglichkeiten der App Vermarktung: Teil 1},
-  month = apr,
+  month = feb,
   year =  {2016},
   url =   {http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/}
 }
